--- a/templates/template.html
+++ b/templates/template.html
@@ -23,14 +23,12 @@
             <th>Position</th>
             <th>Name</th>
             <th>Country</th>
-            <th>Total sales</th>
         </tr>
         <#list ranking as map>
             <tr>
-                <td>${map['position']}</td>
+                <td>${map['rank']}</td>
                 <td>${map['name']}</td>
                 <td>${map['country']}</td>
-                <td>${map['total_sales']}</td>
             </tr>
         </#list>
     </table>
